--- a/thor-android/src/main/res/values/strings.xml
+++ b/thor-android/src/main/res/values/strings.xml
@@ -27,5 +27,12 @@
     <string name="signUp.register_button_title">Register</string>
     <string name="signUp.password_is_not_the_same">Password is not the same</string>
     <string name="signIn.sign_in_welcome">Please Sign In</string>
+    <string name="leftMenu.add_shop">Add Shop</string>
+    <string name="leftMenu.sign_in">Sign In</string>
+    <string name="leftMenu.sign_out">Sign Out</string>
+    <string name="leftMenu.about_app">About Coffee</string>
+    <string name="leftMenu.sign_out_confirm">Are you sure you want to sign out?</string>
+    <string name="leftMenu.cancel">Cancel</string>
+    <string name="leftMenu.sign_in_required">You have to sign in first</string>
 
 </resources>
